# forteauto-api

./: .style.yapf  Pipfile  Procfile  README.md  pyproject.toml  pytest.ini  requirements.txt  testing.sqlite
.github/workflows/: build-deploy.yml
fortauto/: main.py  server.py
fortauto/api/: api_base_models.py  api_base_router.py
fortauto/api/payment/: payment_model.py  payment_router.py  payment_schema.py
fortauto/api/service/: service_model.py  service_router.py  service_schema.py
fortauto/api/user/: user_model.py  user_router.py  user_schema.py
fortauto/conf/: config.py
fortauto/core/: authentication.py  jwt_anth.py
fortauto/core/mail/: config.py  exception.py  mailer.py
fortauto/core/payment/: rave_payement.py
fortauto/database/: database_dependencies.py  document.py
fortauto/utils/: shortcuts.py
forteauto/: main.py  server.py
forteauto/api/: api_base_models.py  api_base_router.py
forteauto/api/payment/: payment_model.py  payment_router.py  payment_schema.py
forteauto/api/service/: service_model.py  service_router.py  service_schema.py
forteauto/api/user/: user_model.py  user_router.py  (+1 more)
forteauto/conf/: config.py
forteauto/core/: authentication.py  jwt_anth.py  password.py
forteauto/database/: database_dependencies.py  document.py
forteauto/utils/: shortcuts.py
migrations/: env.py
migrations/versions/: 2474939bcb54_initial_migration.py  3c819f4db0b7_initial_migrations.py  a6b460411358_initial_migrations.py  ed27032ea991_.py
templates/: action.html
tests/: conftest.py  test_fortauto.py
tests/api/: conftest.py
(+38 files in other folders)
